Changed field selectors so that they use the new list selectors